# w2v2-speaker-few-samples

./: .env.example  .gitignore  dm_stats.py  pyproject.toml  readme.md  run.py  shards_tiny_few_ids.txt  shards_tiny_many_ids.txt  stats_tiny_few.txt  stats_tiny_many_high.txt  stats_tiny_many_low.txt  stats_vox2.txt
config/: train_speaker.yaml
config/callbacks/: speaker_default.yaml  speaker_early_stopping.yaml
config/data/: tiny_voxceleb_few.yaml  tiny_voxceleb_many_high.yaml  tiny_voxceleb_many_low.yaml  voxceleb2.yaml
config/experiment/: ablation_wav2vec2_tiny_few.yaml  ablation_wav2vec2_tiny_many_high.yaml  ecapa_full.yaml  ecapa_tiny_few.yaml  ecapa_tiny_many_high.yaml  ecapa_tiny_many_low.yaml  wav2vec2_full.yaml  wav2vec2_tiny_few.yaml  wav2vec2_tiny_many_high.yaml  wav2vec2_tiny_many_low.yaml  xvector_full.yaml  xvector_tiny_few.yaml  xvector_tiny_many_high.yaml  xvector_tiny_many_low.yaml
config/network/: ecapa.yaml  wav2vec2.yaml  xvector.yaml
config/trainer/: trainer.yaml
experiments/: example_sbatch.sh  wav2vec2_tiny_many_naive_grid.sh
meta/: tiny_few_utterance_list.csv  tiny_many_high_utterance_list.csv  tiny_many_low_utterance_list.csv  val_trials.txt  val_trials_tiny_few.txt
notebooks/: nv_2022-02-14_eda_full.ipynb
requirements/: requirements_torch110_cuda113.txt
result_analysis/: fix_runs.py  naive_lr_search_boundaries.txt  plot.r  plot_ablation.ipynb  plot_four.csv  plot_lr_grid.ipynb  plot_steps.ipynb
scripts/: hydra_bash_complete.sh  lsyncd.conf.lua  print_env.sh  setup_cluster.sh  setup_dependencies.sh
src/: main.py
(+67 files in other folders)
